--- a/ExViewer/Views/EhWikiDialog.xaml
+++ b/ExViewer/Views/EhWikiDialog.xaml
@@ -9,6 +9,7 @@
                           Title="TITLE"
                           FullSizeDesired="True"
                           PrimaryButtonText="Ok"
+                          Opened="MyContentDialog_Opened"
                           RequiresPointer="WhenFocused"
                           mc:Ignorable="d">
     <controls:MyContentDialog.TitleTemplate>
